# robotics-prototype

./: .gitignore  .gitmodules  README.md  requirements.txt
docs/design/: js-servo-code.dia
launch/: astro-full.launch  full-launch.sh
robot/basestation/: AntennaClient.py  Bearing.m  Bearing.py  GPS_IMU.ino  GPS_serial.ino  Nav_funs.py  Navigation.py  NavigationClient.py  app.py  stream_capture.py  test.py
robot/basestation/config/: .bash_aliases  change_mode.py  change_mode.sh
robot/basestation/templates/: AutomaticRoverControls.html  Base.html  ControlPanel.html  Motion.html  Rover.html  RoverMotorControls.html  WheelControl.html
robot/rospackages/: README.md
robot/rospackages/src/astro/: CMakeLists.txt  package.xml
robot/rospackages/src/astro/config/: joint_names_astro.yaml
robot/rospackages/src/astro/launch/: display.launch  gazebo.launch
robot/rospackages/src/astro/meshes/: base_link.STL  left_link.STL  right_link.STL
robot/rospackages/src/astro/urdf/: astro.urdf
robot/rover/: RoverCommandListener.py
robot/rover/Arm/: Arm.ino  PinSetup.h
robot/rover/ArmDriverUnit/: ArmDriverUnit.ino  Includes.h
robot/rover/GPS_IMU/: GPS_IMU.ino
robot/rover/IMU/: IMU.cpp  IMU.h  IMU.ino  IMU.ino.bak  README.md  Sensor.cpp  Sensor.h
robot/rover/MobilePlatform/: MobilePlatform.ino  commands.h
robot/rover/Panaroma/: stitchimage.py
robot/rover/Science/: Science.ino
robot/rover/TennisBallDetection/: README.md  i_view32.ini
robot/util/debug/: README.md  uart_comms_test.py
tests/functional/llc/: README.md  cycleTest.py
(+89 files in other folders)
